<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.crusherd.speedportinfo.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:fitsSystemWindows="true"
            android:orientation="horizontal"
            android:shrinkColumns="0">
            <TableRow>
                <TextView
                    android:id="@+id/textViewDeviceNameKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/device_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewDeviceNameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewDateKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/date_time"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewDSLStateKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/dsl_link"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewDSLStateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewInternetStateKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/internet"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewInternetStateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewDownStreamKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/downstream"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewDownStreamValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewUpStreamKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/upstream"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewUpStreamValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewWLAN24Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/wlan_24"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewWLAN24Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewWLAN5Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/wlan_5"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewWLAN5Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewSSIDKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/ssid"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewSSIDValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewWPSStateKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/wps_state"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewWPSStateValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewWLANTOGOStateKey"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/wlan_to_go"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewWLANTOGOStateValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewFirmwareVersionKey"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/firmware_version"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewFirmwareVersionValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewSerialKey"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/serial"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView
                    android:id="@+id/textViewSerialValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
    <Button
        android:id="@+id/buttonReconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/button_reconnect"
        android:visibility="invisible"/>
</RelativeLayout>